Figma files updated Newletter email bar fixed Styling updated display: flex justify-content: center align-items: center

--- a/Figma Design Concept/styles.css
+++ b/Figma Design Concept/styles.css
@@ -1,7 +1,13 @@
 body {
     line-height: normal;
     font-family: Oswald;
-}    
+    margin: 0;
+}
+
+header {
+    border-bottom: #ff6f6f;
+    border-style: solid;
+}
 
 .menu-btn, .login-btn {
     position: absolute;
@@ -31,14 +37,10 @@ body {
     height: 0px;
 }
 
-/* .border-container {
-    width: 100%;
-    position: relative;
+/* #border-container {
+    width: 99;
     background-color: #fff;
     border: 4px solid #ff6f6f;
-    box-sizing: border-box;
-    
-
 } */
 
 #get-ready {
@@ -109,19 +111,35 @@ body {
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
 
-.newsletter-container-border{
-    position: relative;
+.newsletter-container-border {
     background-color: rgba(255, 111, 111, 0.75);
+    margin: 50px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 53px;
-    top: 30px;
 }
 
-.subscribe-text {
+#subscribe-text {
+    font-size: 15px;
+    padding-right: 8px;
+    text-transform: uppercase;
+    color: #000;
+}
+
+#newsletter-email {
+    border-radius: 8px;
+    background-color: #fff;
+    border: 1px solid #000000;
+    font-size: 16px;
+    color: #b3b3b3;
+}
+
+/* #subscribe-text {
     position: relative;
-    margin: 0;
     font-size: 15px;
     line-height: 36px;
-    display: inline-flex;
+    display: inline;
     text-transform: uppercase;
     color: #000;
     text-align: center;
@@ -132,18 +150,11 @@ body {
 
 #subscribe-email {
     position: relative;
-    margin: 0;
     border-radius: 8px;
     background-color: #fff;
-    border: 1px solid #d9d9d9;
-    box-sizing: border-box;
+    border: 1px solid #000000;
     overflow: hidden;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
     padding: 12px 16px;
-    min-width: 240px;
-    text-align: left;
     font-size: 16px;
     color: #b3b3b3;
-}
+} */
